--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,28 +1,17 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title >
-      Birthday Card
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+
 
 <ion-content padding>
- <div class="from">
-   <p style="margin-left: 38px; padding: 5px; color: white; font-size: 15px"> To: Habir</p>
- </div>
-  
- <div class="to">
-  <p style="margin-left: 5px; padding: 5px; color: white; font-size: 15px"> From: Felix</p>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Rock+Salt&display=swap');
+    </style>
+  <div style="margin-top: -15px;margin-bottom: -550px; margin-left: -320px; position: absolute; opacity: .6;">
+    <img src="../../assets/imgs/pexels-photo-255403.jpeg" height="635px">
+  </div>
+<div style="margin-top: -15px;margin-bottom: -550px; margin-left: -400px; position: absolute; opacity: .8;">
+  <img src="../../assets/imgs/pexels-photo-931178.jpeg" height="635px">
 </div>
- 
-
- <ion-card style="margin-top: -350px">
-  <ion-item>
-    <ion-icon name="clock" slot="start"></ion-icon>
-  </ion-item>
-  <ion-card-content>
-      I think that someone important was born today. Who could it be? Oh, yes! It was you! Best wishes for a happy birthday and a year filled with blessings. It’s your birthday again. So, how many candles will be on your cake this year? Oh well, never mind. Best wishes for today and the year ahead.
-  </ion-card-content>
-</ion-card>
-
+<div style="margin-left: 150px; margin-top:200px">
+  <img src="../../assets/imgs/pexels-photo-265047.jpeg" width="900px" height="100%">
+</div>
+<div style="font-family: 'Rock Salt', cursive; color: rgb(155, 99, 96); font-size: 25px; line-height: 35px;   margin-left: 165px; margin-top: -115px">Happy Birthday Granny...</div>
 </ion-content>
